[gd_scene load_steps=8 format=3 uid="uid://cu676toeh8qff"]

[ext_resource type="Texture2D" uid="uid://d24m81ex6c55s" path="res://assets/ui/hud/bars/stamina/under.png" id="1_yk8qc"]
[ext_resource type="Texture2D" uid="uid://bj3s2w8i8bf24" path="res://assets/ui/hud/bars/stamina/progress.png" id="2_r8xbq"]
[ext_resource type="Script" uid="uid://cfoqtryab4kpa" path="res://scenes/ui/bars/stamina/stamina_bar.gd" id="3_r8xbq"]

[sub_resource type="Animation" id="Animation_r8xbq"]
resource_name = "fade_in"
length = 0.333337
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333333),
"transitions": PackedFloat32Array(1, 2.54912),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6oc5w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_tnoia"]
resource_name = "fade_out"
length = 0.333337
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333333),
"transitions": PackedFloat32Array(1, 3.13834),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pwtmr"]
_data = {
&"RESET": SubResource("Animation_6oc5w"),
&"fade_in": SubResource("Animation_r8xbq"),
&"fade_out": SubResource("Animation_tnoia")
}

[node name="StaminaBar" type="TextureProgressBar"]
self_modulate = Color(1, 1, 1, 0)
offset_right = 256.0
offset_bottom = 32.0
step = 0.1
texture_under = ExtResource("1_yk8qc")
texture_progress = ExtResource("2_r8xbq")
script = ExtResource("3_r8xbq")

[node name="InactiveTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_pwtmr")
}

[connection signal="timeout" from="InactiveTimer" to="." method="_on_inactive_timer_timeout"]
